<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="app_name">EDC</string>
    <string name="header_title">EDC APPT</string>
    <string name="dateTime">Date/Time</string>
    <string name="placeholder">:)</string>
    <string name="dateTimeAuto">Auto</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="sec">s</string>
    <string name="ad">Ad</string>
    <string name="ad_widget_label">Ad</string>
    <string name="amount_widget_label">Amount</string>
    <string name="base_amount">Base Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="trans_oriDate">Original Transaction Date</string>
    <string name="has_trans_for_settle">Please Settle Firstly</string>
    <string name="amount_default">0</string>
    <string name="quick_pass_sale_free_pin">Sale by PIN</string>
    <string name="demo_mode">****Demo Mode****</string>
    <string name="paperless">Paperless</string>
    <string name="trans_sale">Sale</string>
    <string name="trans_void">Void</string>
    <string name="trans_adjust">Adjust</string>
    <string name="trans_offline">Offline</string>
    <string name="trans_preAuth">Pre-Auth</string>
    <string name="trans_preauth_comp">PREAUTH COMP</string>
    <string name="trans_preauth_cancel">PREAUTH Cancel</string>
    <string name="trans_preauth_comp_cancel">PREAUTH COMP Cancel</string>
    <string name="trans_preauth_comp_offline">PREAUTH COMP Offline</string>
    <string name="trans_dcc">Dcc</string>
    <string name="trans_logon">Pos Logon</string>
    <string name="trans_instalment">Instalment</string>
    <string name="trans_moto_sale">Moto Sale</string>
    <string name="trans_moto_refund">Moto Refund</string>
    <string name="trans_moto_void">Moto Void</string>
    <string name="trans_base_moto_preAuth">Base Moto PreAuth</string>
    <string name="trans_moto_menu">Moto</string>
    <string name="trans_moto_preAuth">Moto PreAuth</string>
    <string name="trans_moto_preauth_comp">Moto PreAuth Comp</string>
    <string name="trans_moto_preauth_cancel">Moto PreAuth Cancel</string>
    <string name="trans_moto_preauth_comp_cancel">Moto PreAuth Comp Cancel</string>
    <string name="trans_quasi_cash">Quasi Cash</string>
    <string name="trans_cash_advance">Cash Advance</string>
    <string name="trans_refund">Refund</string>
    <string name="trans_void_refund">Void Refund</string>
    <string name="trans_readCard">Card Number Query</string>
    <string name="trans_echo">Echo</string>
    <string name="trans_settle">Settlement</string>
    <string name="trans_batch_up">Batch Upload</string>
    <string name="trans_settle_end">Settlement End</string>
    <string name="trans_offline_send">Offline</string>
    <string name="trans_offline_send_bat">Offline Upload</string>
    <string name="trans_tmk_download">TMK Download</string>
    <string name="trans_history">History</string>
    <string name="trans_password">Password</string>
    <string name="trans_lock">Lock</string>
    <string name="trans_signature">Signature</string>
    <string name="trans_user_agreement">User Agreement</string>
    <string name="trans_reprint">Reprint</string>
    <string name="trans_manage">Management</string>
    <string name="trans_other_transaction">Other Transaction</string>
    <string name="trans_DCC">DCC</string>
    <string name="trans_wizard">EDC PARAM</string>
    <string name="trans_settings">Settings</string>
    <string name="history_total">Total</string>
    <string name="history_detail">Detail</string>
    <string name="history_detail_type">Type</string>
    <string name="history_detail_issuer">Card Type</string>
    <string name="history_detail_card_no">Card NO.</string>
    <string name="history_detail_amount">Amount</string>
    <string name="history_detail_auth_code">Auth Code</string>
    <string name="history_detail_trace_no">Trace NO.</string>
    <string name="history_detail_ref_no">Reference NO.</string>
    <string name="history_detail_state">State</string>
    <string name="history_summary_ref_no">Reference NO.:</string>
    <string name="history_menu_print_trans_last">Print Last</string>
    <string name="history_menu_print_trans_detail">Print Detail</string>
    <string name="history_menu_print_trans_total">Print Summary</string>
    <string name="history_menu_print_last_total">Print Last Settle</string>
    <string name="DCC_TransType">Trans Type</string>
    <string name="DCC_TotalAmount">Total Amount:   HKD</string>
    <string name="DCC_Rate">Rate</string>
    <string name="trans_balance">Inquiry Balance</string>
    <string name="balance_prompt">Balance</string>
    <string name="trans_amount_default">￥<xliff:g id="AMOUNT">1000.00</xliff:g></string>
    <string name="state_normal">Normal</string>
    <string name="state_voided">Voided</string>
    <string name="state_adjusted">Adjusted</string>
    <string name="state_uploaded">Uploaded</string>
    <string name="state_not_sent">Not Sent</string>
    <string name="settle_trans_preview">Preview</string>
    <string name="settle_trans_total">Settle Total List</string>
    <string name="settle_acquirer_name">Acquirer Name</string>
    <string name="settle_merchant_name">Merchant Name</string>
    <string name="settle_merchant_id">Merchant NO.</string>
    <string name="settle_terminal_id">Terminal NO.</string>
    <string name="settle_batch_id">Batch NO.</string>
    <string name="settle_type">Type</string>
    <string name="settle_trans_type">Trans Type</string>
    <string name="settle_trans_times">Trans Times</string>
    <string name="settle_amount">Amount</string>
    <string name="settle_print_detail_or_not">Print Settle Detail Or Not?</string>
    <string name="settle_print_fail_detail_or_not">Print Fail Detail Or Not?</string>
    <string name="settle_select_acquirer">Select Acquirer</string>
    <string name="settle_preview_acquirer">Preview Acquirer</string>
    <string name="settle_select_acquirer_preview">Preview</string>
    <string name="settle_total_void_sale">Voided Sale</string>
    <string name="settle_total_void_refund">Voided Refund</string>
    <string name="settle_details_choose">Choose</string>
    <string name="settle_all_selected">Settle</string>
    <string name="pwd_merchant">Merchant</string>
    <string name="pwd_terminal">Terminal</string>
    <string name="pwd_void">Void</string>
    <string name="pwd_refund">Refund</string>
    <string name="pwd_void_refund">Void Refund</string>
    <string name="pwd_adjust">Adjust</string>
    <string name="pwd_settle">Settlement</string>
    <string name="pwd_offline">Offline sale</string>
    <string name="pwd_old_pwd">Old Password</string>
    <string name="pwd_new_pwd">New Password</string>
    <string name="pwd_not_equal">Not Matched, Please Enter Again</string>
    <string name="pwd_verify_new_pwd">Verify New Password</string>
    <string name="pwd_succ">Success</string>
    <string name="pwd_incorrect_length">Request 6 Digits</string>
    <string name="signature_clear">Clear</string>
    <string name="signature_done">Enter</string>
    <string name="signature_redo">Signature Data Is Too Long,Please Re-sign</string>
    <string name="user_agreement_cancel">Cancel</string>
    <string name="user_agreement_enter">Enter</string>
    <string name="user_agreement_agree">Agree</string>
    <string name="print_history_detail">Transaction Detail List</string>
    <string name="print_settle_detail">Settle Detail List</string>
    <string name="print_history_total">Transaction Total List</string>
    <string name="print_last_total">Last Transaction Total List</string>
    <string name="print_offline_send_failed">Failed Offline Send Detail List</string>
    <string name="prompt_merchant_pwd">Please Enter Merchant Password</string>
    <string name="prompt_terminal_pwd">Please Enter Terminal Password</string>
    <string name="prompt_void_pwd">Please Enter Void Password</string>
    <string name="prompt_refund_pwd">Please Enter Refund Password</string>
    <string name="prompt_void_refund_pwd">Please Enter Void Refund Password</string>
    <string name="prompt_adjust_pwd">Please Enter Adjust Password</string>
    <string name="prompt_offline_sale_pwd">Please Enter Offline Sale Password</string>
    <string name="prompt_settle_pwd">Please Enter Settle Password</string>
    <string name="prompt_sys_pwd">Please Enter System Administrator Password</string>
    <string name="prompt_pin">Please Enter PIN</string>
    <string name="prompt_no_pin">No PIN, Please Click OK</string>
    <string name="prompt_offline_pin">Please Enter PIN</string>
    <string name="prompt_auth_code">Please Enter Approval Code</string>
    <string name="prompt_lock_terminal">Lock Terminal?</string>
    <string name="prompt_insert_swipe_wave_card">Please Swipe Card/Insert Card/Wave Card</string>
    <string name="prompt_insert_card">Please Insert Card</string>
    <string name="prompt_swipe_card">Please Swipe Card</string>
    <string name="prompt_wave_card">Please Wave Card</string>
    <string name="prompt_swipe_failed_please_retry">Read Card Failed, Please Retry</string>
    <string name="prompt_input_mode_params_error">Card Parameters Error</string>
    <string name="prompt_ic_card_input">The Card Is IC Card, Please Insert Card!</string>
    <string name="prompt_card_date">Card Date</string>
    <string name="prompt_card_num">Card No.</string>
    <string name="prompt_card_date_err">Date Format Error, Please Check!</string>
    <string name="prompt_card_num_err">Card Number Error, Please Check!</string>
    <string name="prompt_card_num_manual">Enter Card Number Manually</string>
    <string name="prompt_date_default">MM/YY</string>
    <string name="prompt_default_searchCard_prompt">Please Use Your Bank Card</string>
    <string name="prompt_no_sms">Unable to send SMS</string>
    <string name="prompt_phone_number">Please Input Phone Number:</string>
    <string name="prompt_email_address">Please Input Email Account:</string>
    <string name="prompt_input_transno">Please Enter Original Trans NO.</string>
    <string name="prompt_input_orig_refer">Original Transaction Reference NO.</string>
    <string name="prompt_input_amount">Amount:</string>
    <string name="prompt_input_tenure">Tenure:</string>
    <string name="prompt_input_cvv2">Please Enter CVV2:</string>
    <string name="prompt_discount_amount">Discount Amount:</string>
    <string name="prompt_input_program_id">Program Id:</string>
    <string name="prompt_input_product_id">Product Id:</string>
    <string name="prompt_input_refund_amount">Refund Amount:</string>
    <string name="prompt_input_moto_refund_amount">MotoRefund Amount:</string>
    <string name="prompt_input_auth_code">Authorization Code</string>
    <string name="prompt_input_date">Original Transaction Date</string>
    <string name="please_input_again">Please Enter Again</string>
    <string name="prompt_date_default2">MM/DD</string>
    <string name="prompt_void_last">Click OK to Void Last Transaction</string>
    <string name="prompt_base_amount">Base Amount</string>
    <string name="prompt_tip">Tip</string>
    <string name="prompt_ori_tips">Original Tip</string>
    <string name="prompt_new_tips">New Tip:</string>
    <string name="prompt_total_amount">Total Amount</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="acq_select_all">All</string>
    <string name="image_desc"> </string>
</resources>