<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <WebView
            android:id="@+id/AgreementContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:scrollbars="vertical" />

        <CheckBox
            android:id="@+id/AgreementCheck"
            android:text="@string/user_agreement_agree"
            android:checked="false"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height" />

        <ImageView
            style="@style/LongLine"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/selection_button_gray"
                android:text="@string/user_agreement_cancel"
                android:textColor="@color/cancel_button_text"
                android:textSize="@dimen/font_size_normal"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/enter_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/user_agreement_enter"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_normal"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>