<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/space_margin_top_small">

        <!-- 显示金额 -->

        <LinearLayout
            android:id="@+id/trans_amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_left_and_right_large"
            android:layout_marginEnd="@dimen/space_left_and_right_large"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/history_detail_amount"
                android:textColor="@color/prompt_no_pwd_color"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:id="@+id/trans_amount_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|end"
                android:text="@string/amount_default"
                android:textColor="@color/trans_amount_color"
                android:textSize="@dimen/font_size_larger" />
        </LinearLayout>

        <ImageView
            style="@style/LongLine"
            android:layout_marginTop="@dimen/space_size_large"
            android:contentDescription="@string/image_desc" />

        <RelativeLayout
            android:id="@+id/writeUserNameSpace"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/selection_button_gray"
                android:text="@string/signature_clear"
                android:textColor="@color/cancel_button_text"
                android:textSize="@dimen/font_size_normal"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/signature_done"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_normal"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>