<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/select_acq_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/grid_item_bg"
                android:text="@string/acq_select_all" />
        </RelativeLayout>

        <ListView
            android:id="@+id/select_acq_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select_acq_settle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_settle"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/select_acq_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settle_select_acquirer_preview"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>