<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical">

    <include layout="@layout/header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/space_left_and_right"
        android:layout_marginEnd="@dimen/space_left_and_right"
        android:layout_marginTop="@dimen/space_margin_top_small"
        android:orientation="vertical">

        <!-- 显示金额 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prompt_base_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/prompt_base_amount"
                android:textColor="@color/textView_infos"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/value_base_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_default"
                android:gravity="bottom|end"
                android:textColor="@color/textView_infos"
                android:textSize="@dimen/font_size_small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_size_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prompt_oritips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/prompt_ori_tips"
                android:textColor="@color/textView_infos"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/value_oritips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|end"
                android:text="@string/prompt_input_date"
                android:textColor="@color/textView_infos"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_size_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prompt_new_tips"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="@string/prompt_new_tips"
                android:textColor="@color/textView_infos"
                android:textSize="@dimen/font_size_small" />

            <com.pax.view.keyboard.CustomKeyboardEditText
                android:id="@+id/prompt_edit_newtips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|end"
                android:paddingTop="@dimen/space_size_small"
                android:background="@color/white"
                android:textColor="@color/prompt_version"
                android:inputType="text"
                android:text="@string/amount_default"
                android:textSize="@dimen/font_size_small"
                app:xml="@xml/numeric_keyboard"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_size_small"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prompt_totalamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/prompt_total_amount"
                android:textColor="@color/textView_infos"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/value_totalamount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:text="@string/prompt_input_date"
                android:textColor="@color/textView_infos"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <Button
            android:id="@+id/info_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/space_height_large"
            android:layout_marginStart="@dimen/space_left_and_right"
            android:layout_marginEnd="@dimen/space_left_and_right"
            android:background="@drawable/button_background"
            android:text="@string/dialog_ok"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

</LinearLayout>