<?xml version="1.0" encoding="utf-8"?><!-- 可以直接输入的字符(如0-9,.)，他们在键盘映射xml中的android:codes值必须配置为该字符的ASCII码 -->
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"

    android:keyWidth="25%p"
    android:horizontalGap="0px"
    android:verticalGap="0px"
    android:keyHeight="9%p">
    <Row>
        <Key
            android:codes="49"
            android:keyLabel="1" />
        <Key
            android:codes="50"
            android:keyLabel="2" />
        <Key
            android:codes="51"
            android:keyLabel="3" />
        <Key
            android:codes="-3"
            android:keyLabel="@string/dialog_cancel"
            android:keyIcon="@drawable/btn_keyboard_opkey"
            android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key
            android:codes="52"
            android:keyLabel="4" />
        <Key
            android:codes="53"
            android:keyLabel="5" />
        <Key
            android:codes="54"
            android:keyLabel="6" />
        <Key
            android:codes="-5"
            android:keyLabel="@string/dialog_delete"
            android:keyIcon="@drawable/btn_keyboard_opkey"
            android:keyEdgeFlags="right"
            android:isRepeatable="true" />
    </Row>
    <Row>
        <Key
            android:codes="55"
            android:keyLabel="7" />
        <Key
            android:codes="56"
            android:keyLabel="8" />
        <Key
            android:codes="57"
            android:keyLabel="9" />
        <Key
            android:codes="-4"
            android:keyLabel="@string/dialog_ok"
            android:keyIcon="@drawable/selection_button_confirm"
            android:keyEdgeFlags="right"
            android:keyHeight="18%p" />
    </Row>
    <Row>
        <Key
            android:codes="484848"
            android:keyLabel="000" />
        <Key
            android:codes="4848"
            android:keyLabel="00" />
        <Key
            android:codes="48"
            android:keyLabel="0" />

    </Row>
</Keyboard>
