<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <include layout="@layout/header_layout" />

    <LinearLayout
        android:id="@+id/trans_total_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_left_and_right"
        android:layout_marginEnd="@dimen/space_left_and_right"
        android:layout_marginTop="@dimen/space_margin_top_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:gravity="bottom"
            android:textColor="@color/prompt_no_pwd_color"
            android:textSize="@dimen/font_size_normal_small" />

        <TextView
            android:id="@+id/total_amount_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_default"
            android:gravity="bottom|end"
            android:textColor="@color/trans_amount_color"
            android:textSize="@dimen/font_size_larger" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trans_tip_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_left_and_right"
        android:layout_marginEnd="@dimen/space_left_and_right"
        android:layout_marginTop="@dimen/space_margin_top_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            android:gravity="bottom"
            android:textColor="@color/prompt_no_pwd_color"
            android:textSize="@dimen/font_size_normal_small"/>

        <TextView
            android:id="@+id/tip_amount_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_default"
            android:gravity="bottom|end"
            android:textColor="@color/trans_amount_color"
            android:textSize="@dimen/font_size_larger" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_height_larger"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/prompt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_margin_top_small"
            android:gravity="center"
            android:text="@string/prompt_pin"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/pin_input_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginStart="@dimen/space_left_and_right"
            android:layout_marginEnd="@dimen/space_left_and_right"
            android:layout_marginTop="@dimen/space_size_small"
            android:background="@drawable/edit_frame"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_larger" />

        <TextView
            android:id="@+id/prompt_no_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_size_small"
            android:gravity="center"
            android:text="@string/prompt_no_pin"
            android:textColor="@color/prompt_no_pwd_color"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</LinearLayout>